Tests passing, resource.Model is now an object

--- a/samples/mycomponent/server/config.json
+++ b/samples/mycomponent/server/config.json
@@ -5,7 +5,7 @@
     "components":
     [
         {
-            "model": "myActualComponent",
+            "model": "acme:myfamily:myActualComponent",
             "name": "comp1",
             "namespace": "acme",
             "type": "mycomponent"
