--- a/examples/customresources/Makefile
+++ b/examples/customresources/Makefile
@@ -8,13 +8,13 @@ module:
 	go build -o module/module ./module/module.go
 
 run-remote:
-	go run server/server.go -config server/config.json
+	go run server/server.go -config server/remote.json
 
 run-parent:
-	cd ../../ && go run web/cmd/server/main.go -config examples/customresources/remote.json
+	cd ../../ && go run web/cmd/server/main.go -config examples/customresources/server/parent.json
 
 run-module: module
-	cd ../../ && go run web/cmd/server/main.go -config examples/customresources/module.json
+	cd ../../ && go run web/cmd/server/main.go -config examples/customresources/module/module.json
 
 run-client:
 	go run client/client.go
