Add more tests, fix bugs, fix linter to allow CI tests, include web-build (for ci test passing)

--- a/etc/.golangci.yaml
+++ b/etc/.golangci.yaml
@@ -31,6 +31,7 @@ linters:
     - goimports
     - golint
     - gomnd
+    - gomoddirectives #SMURF REMOVE BEFORE MERGE! (Allows replace in go.mod for testing.)
     - ifshort
     - importas
     - interfacebloat
